--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "Temitope",
+  "author": "Temitope",
+  "name": "fcc-learn-npm-package-json",
   "dependencies": {
     "express": "^4.14.0"
   },
